--- a/src/page/Home/home.css
+++ b/src/page/Home/home.css
@@ -1,6 +1,5 @@
 .container{
-    height: 100vh;
-    padding: 6%;
+    min-height: 100vh;
 }
 
 .box-home{
@@ -18,14 +17,14 @@
 
 .title{
     font-size: 25px;
-    color: #1d1f29;
 }
 
 /* News Body */
 
 .news-body{
-    width: 100%;
-    height: 66vh;
+    width: 90%;
+    height: 67vh;
+    margin: 0 auto;
     box-shadow: 0px 0px 10px 1px rgb(127 137 185 / 20%);
     display: flex;
     flex-direction: column;
@@ -36,11 +35,23 @@
 }
 
 .today-text{
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.container-text{
     text-align: center;
 }
 
 .today-title{
     font-size: 26px 
+}
+
+.today-paragraph{
+    text-align: center;
 }
 
 .today-image img{
@@ -57,4 +68,59 @@
     border-radius: 8px;
     text-align: center;
     cursor: pointer;
+}
+
+@media (min-width: 1440px){
+
+    .container{
+        color: #3f3d56;
+    }
+
+    .title{
+        font-size: 32px;
+        color: #3f3d56;
+    }
+
+    .subtitle, .news-title{
+        font-size: 18px;
+        color: #3f3d56;
+    }
+
+    .news-body{
+        width: 80%;
+        height: 65vh;
+        flex-direction: row-reverse;
+        
+    }
+   
+    .today-text, .today-image{
+        width: 50%;
+    }
+
+    .today-text{
+        justify-content: space-between;
+    }
+
+    .today-title{
+        font-size: 30px;
+        font-weight: 600;
+    }
+
+    .today-paragraph{
+        font-size: 19px;
+
+    }
+
+    .today-image img{
+        width: 100%;
+        height: 60vh;
+    }
+
+    .today-link{
+        cursor: pointer;
+    }
+
+    .today-link:hover{
+        background-color: #3f3d5690;
+    }
 }
