--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -4,12 +4,16 @@
     background-color: #ffffff;
     padding: 1%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    border-bottom: 1px dashed #a380ba;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0px 0px 10px 1px rgb(127 137 185 / 20%);
 }
 
 .menu > *{
-    height: 30%;
+    height: 40%;
     list-style: none;
     font-size: 13px;
     font-weight: bold;
@@ -19,8 +23,9 @@
 }
 
 .menu li:first-child{
+    width: 20%;
+    height: 80%;
     text-align: left;
-    align-self: flex-start;
 }
 
 
@@ -32,5 +37,26 @@
 
 .logo{
     width: 50%;
+    height: 5vh;
     font-weight: 700;
+}
+
+
+@media (min-width: 1440px){
+
+    .menu{
+        padding: 0 8% 0 0%;
+    }
+
+    .menu li{
+        width: 2%;
+    }
+
+    .menu li:first-child{
+        width: 20%;
+    }
+
+    .menu a{
+        font-size: 16px;
+    }
 }
