--- a/src/page/About/about.css
+++ b/src/page/About/about.css
@@ -1,17 +1,17 @@
 .container-about{
     min-height: 100vh;
-    background-color: #f2f2f2;
-    overflow: scroll d d t;
+    padding: 55px 3% 0px 3%;
+    background-color: #f2f2f290;
+    overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 3%;
+    color: #3f3d56;
 }
 
 
 .about-title h2{
-    color: #3f3d56;
     font-size: 26px;
     text-align: center;
 }
@@ -19,6 +19,7 @@
 .about-text p{
     font-size: 16px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .about-image{
@@ -29,23 +30,29 @@
 
 .about-me img{
     border-radius: 20px;
-    width: 70%;
+    max-width: 75%;
+    max-height: 65vh;
+    height: auto;
+    width: auto;
     margin: 0 auto;
 }
 
 .social-medias{
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: space-evenly;
+}
+
+.social-medias a{
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .cards{
     max-width: 50%;
     height: 19vh;
-    background-color: #3f3d5695;
+    background-color: #8169b390;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -56,7 +63,56 @@
 
 
 @media (min-width: 1440px){
+
+    .container-about{
+        height: 80vh;
+        justify-content: space-evenly;
+    }
+
+    .about-title{
+        margin-bottom: 40px;
+    }
+
     .about-me{
+        height: 60vh;
+        display: flex;
+        justify-content: center;
         flex-direction: row;
+    }
+
+    .about-text{
+        height: 70vh;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: center;
+    }
+
+    .about-text p{
+        height: 30%;
+    }
+
+    .about-image{
+        width: 40%;
+    }
+
+    .about-image img{
+        max-width: 65%;
+        max-height: 55vh;
+        height: auto;
+        width: auto;
+        margin: 0;
+    }
+
+    .social-medias{
+        height: 20vh;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .social-medias a{
+        width: 45%;
     }
 }
