--- a/src/page/NewsLetter/newsletter.css
+++ b/src/page/NewsLetter/newsletter.css
@@ -1,7 +1,7 @@
 .container-newsletter{
+    height: 100vh;
     background-color: #fdfdfd;
-    min-height: 100vh;
-    padding: 2%;
+    padding: 50px 2% 0px 2%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
