--- a/src/page/About/about.css
+++ b/src/page/About/about.css
@@ -16,6 +16,10 @@
     text-align: center;
 }
 
+.about-text{
+    text-align: center;
+}
+
 .about-text p{
     font-size: 16px;
     text-align: center;
@@ -42,6 +46,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .social-medias a{
